Media queries added to avoid white spaces

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,12 +57,33 @@ a:hover {
   border-top: none;
 }
 
-
 /* 
 * Media Queries
 */
 @media (min-width: 1400px) {
   header {
     height: 30vw;
+  }
+}
+
+main {
+  min-height: 40vw;
+}
+
+@media (max-width: 992px) {
+  main {
+    min-height: 70vw;
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    min-height: 100vw;
+  }
+}
+
+@media (max-width: 556px) {
+  main {
+    min-height: 130vw;
   }
 }
